<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvNewTableCode"
        android:layout_width="409dp"
        android:layout_height="51dp"
        android:text="@string/tableCode"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/btnNewTable"
        android:layout_width="234dp"
        android:layout_height="77dp"
        android:text="@string/btnNewTable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNewTableCode"
        app:layout_constraintVertical_bias="0.051" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/edtTableCode"
        android:layout_width="206dp"
        android:layout_height="78dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtTableCode"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewTable"
        app:layout_constraintVertical_bias="0.158" />

    <EditText
        android:id="@+id/edtNickName"
        android:layout_width="238dp"
        android:layout_height="86dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtNickName"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTableCode"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/btnJoinTable"
        android:layout_width="211dp"
        android:layout_height="76dp"
        android:text="@string/btnJoinTable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNickName"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:text="@string/btnSignOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJoinTable"
        app:layout_constraintVertical_bias="0.741" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="186dp"
        android:layout_height="52dp"
        android:text="@string/txvTblCode"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtTableCode"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewTable"
        app:layout_constraintVertical_bias="0.17" />


</androidx.constraintlayout.widget.ConstraintLayout>